RESOLVED FIXED254214
Text not wrapping in nested grid
https://bugs.webkit.org/show_bug.cgi?id=254214
Summary Text not wrapping in nested grid
Jain Jayan
Reported 2023-03-21 08:08:23 PDT
Created attachment 465539 [details] Screenshot of the problem We are having a Problem with the view on our website since the latest version of safari 16.3 and couldnt figure out until now the underlying problem. The problem appears only on the safari browser and doesnt occur on any other.
Attachments
Screenshot of the problem (1.35 MB, image/png)
2023-03-21 08:08 PDT, Jain Jayan
no flags
Test reduction (313 bytes, text/html)
2023-03-21 10:06 PDT, alan
no flags
alan
Comment 1 2023-03-21 10:06:03 PDT
Created attachment 465541 [details] Test reduction
Radar WebKit Bug Importer
Comment 2 2023-03-21 10:29:07 PDT
Radar WebKit Bug Importer
Comment 3 2023-03-21 10:41:50 PDT
Alexey Proskuryakov
Comment 4 2023-03-21 12:33:16 PDT
Brandon
Comment 5 2023-04-11 14:09:28 PDT
Thanks for the bug report Jain. I am able to reproduce it in Safari, and I am currently looking into the issue.
Brandon
Comment 6 2023-04-11 14:10:24 PDT
Some notes on the test case reduction. This only triggers on resize while the website mentioned triggers on initial layout.
Brandon
Comment 7 2023-05-02 14:07:48 PDT
Brandon
Comment 8 2023-05-02 14:09:52 PDT
Posted pull request here https://github.com/WebKit/WebKit/pull/13373. Did not seem to get populated.
EWS
Comment 9 2023-05-19 07:58:33 PDT
Committed 264252@main (705acfb695e5): <https://commits.webkit.org/264252@main> Reviewed commits have been landed. Closing PR #13373 and removing active labels.
Thomas Wisniewski [:twisniewski]
Comment 10 2023-06-06 15:08:47 PDT
Pardon me pinging a closed bug, but I don't see the WPTs in the patch here on wpt.fyi. Have they perhaps not been synced?
Brandon
Comment 11 2023-06-06 15:42:32 PDT
(In reply to Thomas Wisniewski [:twisniewski] from comment #10) > Pardon me pinging a closed bug, but I don't see the WPTs in the patch here > on wpt.fyi. Have they perhaps not been synced? I didn't have a chance to get this exported from the WebKit repo. Just posted the test case to WPT for review https://github.com/web-platform-tests/wpt/pull/40405.
Tim Nguyen (:ntim)
Comment 12 2024-09-03 10:32:40 PDT
Note You need to log in before you can comment on or make changes to this bug.