Text not wrapping in nested grid https://bugs.webkit.org/show_bug.cgi?id=254214 rdar://107002717

Reviewed by Alan Baradlay.

This is a hack fix to support not re-layout text in inner grids. This is caused by the updateGridAreaLogicalSize
being called in performGridItemsPreLayout(). This causes the paragraph to re-need a layout, which should not be happening.
This re-layout ultimately the text to go out of the bounds of the grid.

* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-relayout-with-nested-grid-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-relayout-with-nested-grid-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-relayout-with-nested-grid.html: Added.
* Source/WebCore/rendering/RenderGrid.cpp:
(WebCore::RenderGrid::layoutGrid):
(WebCore::RenderGrid::layoutMasonry):
(WebCore::RenderGrid::computeIntrinsicLogicalWidths const):
(WebCore::RenderGrid::performGridItemsPreLayout const):
* Source/WebCore/rendering/RenderGrid.h:

Canonical link: https://commits.webkit.org/264252@main